--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Custom Number Input</title>
+    <title>Mobile-Friendly Bootstrap Number Input</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        /* General page styling */
         body {
             display: flex;
             justify-content: center;
@@ -15,17 +16,6 @@
             font-family: Arial, sans-serif;
         }
 
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            /* display: none; <- Crashes Chrome on hover */
-            -webkit-appearance: none;
-            margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-        }
-
-        input[type=number] {
-            -moz-appearance:textfield; /* Firefox */
-        }
-
         .custom-number-input {
             display: flex;
             align-items: center;
@@ -35,8 +25,10 @@
             border-radius: 8px;
         }
 
+        /* Input styling */
         .custom-number-input input {
             width: 60px;
+            height: 30px;
             text-align: center;
             background-color: #1e1e1e;
             color: white;
@@ -44,6 +36,7 @@
             border-radius: 5px;
         }
 
+        /* Button styling */
         .custom-number-input button {
             width: 30px;
             height: 30px;
@@ -53,6 +46,20 @@
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        /* Larger touch-friendly buttons for mobile */
+        @media (max-width: 768px) {
+            .custom-number-input button {
+                width: 40px;
+                height: 40px;
+                font-size: 1.25rem;
+            }
+
+            .custom-number-input input {
+                width: 80px;
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
@@ -65,6 +72,7 @@
 </div>
 
 <script>
+    // Apply logic to each custom number input (in case you add more)
     document.querySelectorAll('.custom-number-input').forEach(container => {
         const input = container.querySelector('input');
         const increment = container.querySelector('.increment');
